--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "async": "^0.9.0",
     "lodash": "^2.4.1",
     "promise": "^6.0.1"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/cgrossde/nw-notify"
   }
 }
